# bc-assignment

./: README.md
ingestion/: pyproject.toml
ingestion/ingestion/: main.py
